--- a/cv.html
+++ b/cv.html
@@ -30,36 +30,36 @@
             <div class="section">
                 <h2 class="section-title">Contact</h2>
                 <p class="section-content">Mail : matheo.lagache22@gmail.com</p>
-                <p class="section-content">Phone number : 0638875239</p>
-                <p class="section-content">Address : 16 rue du Moulin, Amiens</p>
-                <p class="section-content">Date of birth : 19/07/2005</p>
-                <p class="section-content">Place of birth : Beauvais</p>
-                <p class="section-content">Sex&nbsp;: Man</p>
-                <p class="section-content">Nationality : French</p>
+                <p class="section-content">numero de telephone : 0638875239</p>
+                <p class="section-content">Addresse : 16 rue du Moulin, Amiens</p>
+                <p class="section-content">Date de naissance : 19/07/2005</p>
+                <p class="section-content">Lieu de naissance : Beauvais</p>
+                <p class="section-content">Sexe;: Homme</p>
+                <p class="section-content">Nationalite : Français</p>
             </div>
             <div class="section">
-                <h2 class="section-title">Diplomas</h2>
-                <p class="section-content">Bac Général - Froissy - Collège Gérard Philippe - Amiens Academy</p>
-                <p class="section-content">Brevet d'études collégiales - Beauvais - Lycée Félix Faure - Amiens Academy
+                <h2 class="section-title">Diplomes</h2>
+                <p class="section-content">Bac Général - Froissy - Collège Gérard Philippe - Academie d'Amiens</p>
+                <p class="section-content">Brevet des colleges - Beauvais - Lycée Félix Faure - Academie d'Amiens
                 </p>
             </div>
             <div class="section">
-                <h2 class="section-title">Profile</h2>
-                <p class="section-content">I am someone who is ready to redouble my efforts to surpass myself and
-                    develop my skills.
-                    I get along well with people and am always in a good mood.</p>
+                <h2 class="section-title">Profil</h2>
+                <p class="section-content">Je suis quelqu'un prêt à redoubler d'efforts pour me dépasser et
+                    développer mes compétences.
+                    Je m'entends bien avec les gens et je suis toujours de bonne humeur.</p>
             </div>
             <div class="section">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Competences</h2>
                 <p class="section-content">HTML, CSS, Python, Visual Studio Code</p>
             </div>
 
 
             <div class="section">
                 <h2 class="section-title">Languages</h2>
-                <p class="section-content">French&nbsp;: Fluent</p>
-                <p class="section-content">Spanish&nbsp;: beginner</p>
-                <p class="section-content">English; intermediate</p>
+                <p class="section-content">Français&nbsp;: courant</p>
+                <p class="section-content">Espagnol&nbsp;: debutant</p>
+                <p class="section-content">Anglais; intermediaire</p>
             </div>
             <div class="section">
                 <h2 class="section-title">Center of interest</h2>
@@ -69,9 +69,9 @@
             </div>
             <div class="section">
                 <h2 class="section-title">Stages</h2>
-                <p class="section-content">I did an internship at a computer store called Cortex, where computer
-                    hardware salespeople and repairers ply their trade. I was able to observe both sides, and it was
-                    very enriching for me.</p>
+                <p class="section-content">J'ai fait un stage dans un magasin d'informatique appelé Cortex, où des ordinateurs
+                    les vendeurs et les réparateurs de quincaillerie exercent leur métier. J'ai pu observer les deux côtés, et c'était
+                    très enrichissant pour moi.</p>
 
 
             </div>
