--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class = "bg-info ">
     
      
-      <h1 class="text-white "><span class="fw-light">Sommaire</span></h1>
+      <h1 class="text-white display-4"><span class="fw-light">Sommaire</span></h1>
       <p>
           <ul style="list-style-type: none ;">
           <li> <a class="text-decoration-none fw-light" href="debutant.html"> Programme debutant</a></li>
@@ -35,7 +35,7 @@
   </div>
 </div>
   <div class="mx-5 ">
-    <h2><a class="text-white mx-5 p-4 px-5 text-decoration-none fw-light" href="cv.html"> Mon CV </a></p>
+    <h2><a class="text-white mx-5 p-4 px-5 text-decoration-none fw-light " href="cv.html"> Mon CV </a></p>
     </h2>
   </div>
 
