--- a/cv.html
+++ b/cv.html
@@ -8,18 +8,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main2.css'>
     <script src='main.js'></script>
-    <html lang="fr">
+    
 
 
 </head>
 
-<body>
 
+    
 
-    </style>
-    <link type="text/css" rel="stylesheet" charset="UTF-8"
-        href="https://www.gstatic.com/_/translate_http/_/ss/k=translate_http.tr.qhDXWpKopYk.L.W.O/d=0/rs=AN8SPfp0QXhhaDDdjg_LgcSqoZiPEzC1tw/m=el_main_css">
-    </head>
 
     <body>
         <div class="img"> </div>
@@ -34,7 +30,7 @@
                 <p class="section-content">Addresse : 16 rue du Moulin, Amiens</p>
                 <p class="section-content">Date de naissance : 19/07/2005</p>
                 <p class="section-content">Lieu de naissance : Beauvais</p>
-                <p class="section-content">Sexe;: Homme</p>
+                <p class="section-content">Sexe: Homme</p>
                 <p class="section-content">Nationalite : Français</p>
             </div>
             <div class="section">
