--- a/index.html
+++ b/index.html
@@ -13,20 +13,64 @@
     <script src='main.js'></script>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark shadow-lg">
 
-    <div><img src=recuperationactivemusculation.webp width="100%" height="870px">
+  <div class="container-fluid">
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Fitness.ply</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <div>
+      <img class=shadow-lg src=alimentation-saine-fournitures-sport-gris.jpg width="100%" height="1065">
     </div>
 
-  <div class = "bg-info ">
+  <div class="bg-info ">
     
      
-      <h1 class="text-white display-4"><span class="fw-light">Sommaire</span></h1>
+      <h1 class="text-white display-4 "><span class="fw-light">Mes Programmes</span></h1>
       <p>
           <ul style="list-style-type: none ;">
-          <li> <a class="text-decoration-none fw-light" href="debutant.html"> Programme debutant</a></li>
-          <li> <a class="text-decoration-none fw-light" href="intermediaire.html">Programme intermediaire</a></li>
-          <li> <a class="text-decoration-none fw-light" href="expert.html">Programme expert</a></li>
+          <li> <a class="text-decoration-none fw-light lead shadow-lg" href="debutant.html"> Programme debutant</a></li>
+          <li> <a class="text-decoration-none fw-light lead shadow-lg" href="intermediaire.html">Programme intermediaire</a></li>
+          <li> <a class="text-decoration-none fw-light lead shadow-lg" href="expert.html">Programme expert</a></li>
         </p>
       <p>
         </ul>
@@ -35,15 +79,25 @@
   </div>
 </div>
   <div class="mx-5 ">
-    <h2><a class="text-white mx-5 p-4 px-5 text-decoration-none fw-light " href="cv.html"> Mon CV </a></p>
+    <h2><a class="text-white mx-5 p-5 px-5 text-decoration-none fw-light  " href="cv.html"> Mon CV </a></p>
     </h2>
   </div>
 
+  <h3 class="text-white  mx-5 fw-light"><strong>Mes contacts</strong></h3>
+  <p>
+  <ul style="list-style-type: none ">
+    <li class="text-white fw-light mx-5  ">mail : matheo.lagache22@gmail.com</li>
+    <li class="text-white fw-light mx-5  ">numero pro: 0638875239</li>
+  
+  
+  </ul>
+  </p>
 
 
 
 
 
 
+</div>
 </body>
 </html>
