--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
       </div>
     </nav>
 
+    <main>
+      <h1 class="fw-light text-white display-1 "><strong>La volonte ne suffit pas, il faut savoir agir</h1></strong>
+    </main>
     <div>
-      <img class=shadow-lg src=alimentation-saine-fournitures-sport-gris.jpg width="100%" height="1065">
+      <img class=shadow-lg src=alimentation-saine-fournitures-sport-gris.jpg width="100%" height="1100">
     </div>
 
   <div class="bg-info ">
