--- a/cv.html
+++ b/cv.html
@@ -24,10 +24,7 @@
                 <h1>Matheo Lagache</h1>
             </div>
             <div class="section">
-                <h2 class="section-title">Contact</h2>
-                <p class="section-content">Mail : matheo.lagache22@gmail.com</p>
-                <p class="section-content">numero de telephone : 0638875239</p>
-                <p class="section-content">Addresse : 16 rue du Moulin, Amiens</p>
+                <h2 class="section-title">Description</h2>
                 <p class="section-content">Date de naissance : 19/07/2005</p>
                 <p class="section-content">Lieu de naissance : Beauvais</p>
                 <p class="section-content">Sexe: Homme</p>
@@ -52,13 +49,13 @@
 
 
             <div class="section">
-                <h2 class="section-title">Languages</h2>
+                <h2 class="section-title">Langages</h2>
                 <p class="section-content">Français&nbsp;: courant</p>
                 <p class="section-content">Espagnol&nbsp;: debutant</p>
-                <p class="section-content">Anglais; intermediaire</p>
+                <p class="section-content">Anglais : intermediaire</p>
             </div>
             <div class="section">
-                <h2 class="section-title">Center of interest</h2>
+                <h2 class="section-title">Centre d'intérêt</h2>
                 <p class="section-content">Football, Manga, Bodybuilding, Reading</p>
 
 
