--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             
             </li>
             <li class="nav-item dropdown">
@@ -43,7 +43,7 @@
                 <li><a class="dropdown-item" href="debutant.html">Programme débutant</a></li>
                 <li><a class="dropdown-item" href="intermediaire.html">Programme intermediaire</a></li>
                 <li><a class="dropdown-item" href="expert.html">Programme expert</a></li>
-                <li><a class="dropdown-item" href="expert.html">Images</a></li>
+                <li><a class="dropdown-item" href="images.html">Images</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -52,10 +52,7 @@
             </li>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Chercher</button>
-          </form>
+        
         </div>
       </div>
     </nav>
