--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
 
 
     <main>
-      <p class="fw-light text-white display-1 border-bottom border-secondary border-white border-3 user-select-none">
+      <p class="fw-light text-white display-1  user-select-none border-bottom border-1 border-secondary">
         <strong>La volonté ne
           suffit
-          pas, il faut
-          savoir agir</p>
+          pas, <div class="fw-light text-white display-1  user-select-none border-bottom border-3 border-secondary">il faut
+            savoir agir</div>
+          </p>
       </strong>
     </main>
     <div>
-      <img class=shadow-lg src=alimentation-saine-fournitures-sport-gris.jpg width="100%" height="1155">
+      <img class=shadow-lg
+        src="photo-noir-blanc-homme-muscle-utilisant-craie-sport-avant-soulever-barre-musculation-dans-salle-sport.jpg"
+        width="100%" height="1455">
     </div>
 
   <div class="bg-info ">
@@ -87,7 +90,7 @@
           <style type="text/css">
             .imagesmuscu {
               left: 152px;
-              top: 1615px
+              top: 1915px
             }
           </style>
           </li>
@@ -97,7 +100,7 @@
       <p class="float-end display-5 text-white fst-italic ">motivation discipline... </p>
       <style type="text/css">
         .text {
-          top: 1600px;
+          top: 1900px;
           right: 150px;
         }
       </style>
@@ -110,7 +113,7 @@
         allowfullscreen></iframe>
         <style type="text/css">
           .video {       
-            top:  1365px;
+            top:  1665px;
             left: 1718px;
           }
         </style>
@@ -134,7 +137,7 @@
               score~Theme</a>
             <style type="text/css">
               .soundcloud {
-                top: 1300px;
+                top: 1610px;
                 left: 1100px;
         
               }
