--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
 
     <main>
-      <p class="fw-light text-white display-1  user-select-none border-bottom border-1 border-secondary">
+      <p class="fw-light text-white display-1  user-select-none ">
         <strong>La volonté ne
           suffit
-          pas, <div class="fw-light text-white display-1  user-select-none border-bottom border-3 border-secondary">il faut
+          pas, <div class="fw-light text-white display-1  user-select-none ">il faut
             savoir agir</div>
           </p>
       </strong>
