--- a/cv.html
+++ b/cv.html
@@ -81,15 +81,15 @@
             </div>
             <div class="section">
                 <h2 class="section-title">Diplomes</h2>
-                <p class="section-content">Bac Général - Froissy - Collège Gérard Philippe - Academie d'Amiens</p>
-                <p class="section-content">Brevet des colleges - Beauvais - Lycée Félix Faure - Academie d'Amiens
+                <p class="section-content">Bac Général - Beauvais - Felix Faure - Academie d'Amiens</p>
+                <p class="section-content">Brevet des colleges - Froissy - Collège Gérard Philippe - Academie d'Amiens
                 </p>
             </div>
             <div class="section">
                 <h2 class="section-title">Profil</h2>
-                <p class="section-content">Je suis quelqu'un prêt à redoubler d'efforts pour me dépasser et
+                <p class="section-content">Je suis une personne prête à redoubler d'efforts pour me dépasser et
                     développer mes compétences.
-                    Je m'entends bien avec les gens et je suis toujours de bonne humeur.</p>
+                    Je suis dynamique et sociable.</p>
             </div>
             <div class="section">
                 <h2 class="section-title">Competences</h2>
@@ -111,8 +111,8 @@
             </div>
             <div class="section">
                 <h2 class="section-title">Stages</h2>
-                <p class="section-content">J'ai fait un stage dans un magasin d'informatique appelé Cortex, où des ordinateurs
-                    les vendeurs et les réparateurs de quincaillerie exercent leur métier. J'ai pu observer les deux côtés, et c'était
+                <p class="section-content">J'ai fait un stage dans un magasin d'informatique appelé Cortex, où il y avait des vendeurs
+                    et réparateurs de matériel informatique. J'ai pu observer les deux côtés, et c'était
                     très enrichissant pour moi.</p>
 
 
