--- a/cvanglais.html
+++ b/cvanglais.html
@@ -80,15 +80,15 @@
         </div>
         <div class="section">
             <h2 class="section-title">Diplomas</h2>
-            <p class="section-content">Bac Général - Froissy - Collège Gérard Philippe - Amiens Academy</p>
-            <p class="section-content">Brevet des colleges - Beauvais - Lycée Félix Faure - Amiens academy
+            <p class="section-content">Bac Général - Beauvais - Felix Faure - Amiens Academy</p>
+            <p class="section-content">Brevet des colleges - Froissy - Collège Gérard Philippe - Amiens academy
             </p>
         </div>
         <div class="section">
             <h2 class="section-title">Profile</h2>
-            <p class="section-content">I am someone ready to redouble my efforts to surpass myself and
+            <p class="section-content">I am a person ready to redouble my efforts to surpass myself and
                 develop my skills.
-                I get along well with people and am always in a good moodr.</p>
+                I am dynamic and sociable.</p>
         </div>
         <div class="section">
             <h2 class="section-title">Skills</h2>
